feat(membership-tier-management): add tier upgrade/downgrade and comprehensive testing
- Add membership tier upgrade and downgrade operations to CreditsEngine
- Extend IStorageAdapter with updateUserMembership method for tier changes
- Add TierCreditsCapConfig to support per-tier credit limits
- Implement UpgradeTierParams and DowngradeTierParams interfaces
- Add comprehensive unit tests for tier operations (upgrade, downgrade, expiration)
- Add property-based tests for tier management, idempotency, and audit logging
- Add integration tests for membership tier management workflows
- Update .gitattributes with proper line ending rules for shell and batch scripts
- Add LOCAL_DEVELOPMENT.md and QUICK_START_LOCAL_DEV.md guides
- Add link-local and unlink-local scripts for local development setup
- Update API_REFERENCE.md and CONFIGURATION.md documentation
- Update package.json with new dependencies and scripts
- Update task tracking in .kiro/specs/credit-sdk/tasks.md
- Enhance error handling in core/errors.ts for tier-related operations
- Extend core/types.ts with membership tier configuration types
- Update MockAdapter and PrismaAdapter to support membership updates
- Improve test coverage across all adapter implementations

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,22 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+# Shell scripts should always use LF
+*.sh text eol=lf
+
+# Windows scripts should always use CRLF
+*.bat text eol=crlf
+
+# Documents
+*.md text
+*.txt text
+
+# Source code
+*.ts text
+*.js text
+*.json text
+
+# Binary files
+*.png binary
+*.jpg binary
+*.svg binary
