--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "test": "vitest --run",
     "test:watch": "vitest",
     "type-check": "tsc --noEmit",
-    "prepublishOnly": "npm run build && npm test"
+    "prepublishOnly": "npm run build && npm test",
+    "docs:serve": "docsify serve docs --port 3002",
+    "docs:deploy": "gh-pages -d docs"
   },
   "keywords": [
     "credits",
@@ -44,7 +46,9 @@
   "devDependencies": {
     "@prisma/client": "^7.3.0",
     "@types/node": "^20.0.0",
+    "docsify-cli": "^4.4.4",
     "fast-check": "^3.0.0",
+    "gh-pages": "^6.1.1",
     "prisma": "^7.3.0",
     "typescript": "^5.0.0",
     "vitest": "^1.0.0"
