--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@leochens/credit-sdk",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A universal SaaS credits management SDK for flexible billing and subscription systems",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -18,7 +18,10 @@
     "type-check": "tsc --noEmit",
     "prepublishOnly": "npm run build && npm test",
     "docs:serve": "docsify serve docs --port 3002",
-    "docs:deploy": "gh-pages -d docs"
+    "docs:deploy": "gh-pages -d docs",
+    "release:patch": "npm version patch && npm publish --access public",
+    "release:minor": "npm version minor && npm publish --access public",
+    "release:major": "npm version major && npm publish --access public"
   },
   "keywords": [
     "credits",
